# Inventory

./: .env  Cargo.toml
migrations/: 20250525133058_create_database.sql
src/: db.rs  errors.rs  main.rs  models.rs
src/handlers/: api_handlers.rs  web_handlers.rs
static/: script.js  style.css
templates/: add_category.html  add_item.html  base.html  edit_item.html  index.html  login.html  signup.html
templates/macros/: icons.html
templates/partials/: _svg_sprite.html
