[package]
name = "household-inventory"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }
tera = "1.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
time = { version = "0.3.41", features = ["serde"] }
bcrypt = "0.17.0"
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5.2"
